mobile spacing fixed

--- a/css/added_styles.css
+++ b/css/added_styles.css
@@ -20,3 +20,9 @@ input {
   font-family: 'Sacramento', sans-serif;
   margin-bottom: 2%;
 }
+
+@media screen and ( max-width: 800px ) {
+  #container {
+    margin: 2% 3% 0 3%;
+    padding: 2%;
+  }
